phase 6 final